Fixed pagiation alignment

--- a/tbx/core/static/torchbox/css/components/_pagination.scss
+++ b/tbx/core/static/torchbox/css/components/_pagination.scss
@@ -1,7 +1,7 @@
 // pagination ==================================================================
 .pagination {
   text-transform: uppercase;
-  padding-left: 65px;
+  padding-left: 15px;
   margin: 30px auto 50px;
   max-width: 1450px;
   
